--- a/src/scss/ContactPage.scss
+++ b/src/scss/ContactPage.scss
@@ -1,24 +1,24 @@
 .Container {
     //background: red;
-    max-width: 1200px;
-    max-height: 1000px;
-    margin: 0 auto;
-    padding: 10px;
-    padding-bottom: 50px;
+    max-width: 100%;
+    max-height: 100%;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding: 65px 25px;
     display: flex;
 }
 
 .item {
     //background: blue;
-    margin: auto;
-    color: black;
+    margin-top: 10px;
+    color: #fff;
     box-sizing: border-box;
     padding-left: 15px;
     padding-right: 15px;
     width: 100%;
     //height: 50px;
     //width: 300px;
-    text-align: center;
+    text-align: left;
     //line-height: 50px;
 }
 
@@ -36,7 +36,7 @@
 li {
     margin: auto;
     //float: left;
-    color: #000;
+    color: #a2a2a2;
     padding: 8px 16px;
     text-decoration: none;
     cursor: pointer;
@@ -45,4 +45,24 @@ li {
 h2 {
     color: #f47321;
     padding-top: 10px;
+}
+
+footer .qodef-footer-top-holder {
+    display: block;
+    background-color: #212121;
+    background-position: center center;
+    background-size: cover;
+}
+
+.item {
+    ul {
+        padding-left: 0;
+
+        li {
+            border-bottom: rgba(162, 162, 162, .5) solid 1px;
+            padding: 8px;
+            font-size: 14px
+        }
+    }
+
 }
